@startuml

package Presentation {
    class RegisterApplicationUI
}

package Domain {
    class Application
}

package Persistence {
    class JpaApplicationRepository
    interface ApplicationRepository
}

package Application {
    class RegisterApplicationController
    class CandidateController
    class ListJobOpeningsController
}

Presentation.RegisterApplicationUI --> Application.RegisterApplicationController
Application.RegisterApplicationController --> Persistence.ApplicationRepository
Persistence.ApplicationRepository <|-- Persistence.JpaApplicationRepository
Application.RegisterApplicationController ---> Domain.Application
Application.RegisterApplicationController ---> Domain.ApplicationDTO
Application.RegisterApplicationController ---> Application.CandidateController
Application.RegisterApplicationController ---> Application.ListJobOpeningsController

@enduml
